--- a/RatingMicroService/src/main/resources/application.yml
+++ b/RatingMicroService/src/main/resources/application.yml
@@ -1,7 +1,7 @@
 
 spring:
   datasource:
-    url: jdbc:mysql://localhost:3306/user_db
+    url: jdbc:mysql://localhost:3306/rating_db
     username: root
     password: root
     driver-class-name: com.mysql.jdbc.Driver
