--- a/RatingMicroService/src/main/resources/application.yml
+++ b/RatingMicroService/src/main/resources/application.yml
@@ -6,7 +6,7 @@ spring:
     password: root
     driver-class-name: com.mysql.jdbc.Driver
   application:
-    name: RatingMicroService
+    name: Rating-MicroService
   jpa:
     hibernate:
       ddl-auto: update
@@ -15,3 +15,13 @@ spring:
 
 server:
   port: 8082
+
+
+eureka:
+  instance:
+    prefer-ip-address: true
+  client:
+    fetch-registry: true
+    register-with-eureka: true
+    service-url:
+      defaultZone: http://localhost:8761/eureka
