--- a/UserMicroService/src/main/resources/application.yml
+++ b/UserMicroService/src/main/resources/application.yml
@@ -1,12 +1,13 @@
 
 spring:
+  application:
+    name: User-MicroService
+
   datasource:
     url: jdbc:mysql://localhost:3306/user_db
     username: root
     password: root
     driver-class-name: com.mysql.jdbc.Driver
-  application:
-    name: UserMicroService
   jpa:
     hibernate:
       ddl-auto: update
@@ -15,3 +16,15 @@ spring:
 
 server:
   port: 8081
+
+
+eureka:
+  instance:
+    prefer-ip-address: true
+  client:
+    fetch-registry: true
+    register-with-eureka: true
+    service-url:
+      defaultZone: http://localhost:8761/eureka
+
+
