calling multiple ctl from api-gateway

--- a/APIGateway/src/main/resources/application.yml
+++ b/APIGateway/src/main/resources/application.yml
@@ -8,7 +8,7 @@ spring:
         - id: USER-MICROSERVICE
           uri: lb://USER-MICROSERVICE
           predicates:
-            - Path=/user/**
+            - Path=/user/**, /manager/**
 
         - id: RATING-MICROSERVICE
           uri: lb://RATING-MICROSERVICE
