added config server | configuration fetch from github yml files

--- a/UserMicroService/src/main/resources/application.yml
+++ b/UserMicroService/src/main/resources/application.yml
@@ -1,7 +1,13 @@
+server:
+  port: 8081
 
 spring:
   application:
     name: User-MicroService
+
+  profiles:
+    active:
+      - dev
 
   datasource:
     url: jdbc:mysql://localhost:3306/user_db
@@ -11,20 +17,20 @@ spring:
   jpa:
     hibernate:
       ddl-auto: update
-
     database-platform: org.hibernate.dialect.MySQLDialect
 
-server:
-  port: 8081
+  config:
+    import: configserver:http://localhost:8083
 
 
-eureka:
-  instance:
-    prefer-ip-address: true
-  client:
-    fetch-registry: true
-    register-with-eureka: true
-    service-url:
-      defaultZone: http://localhost:8761/eureka
+
+#eureka:
+#  instance:
+#    prefer-ip-address: true
+#  client:
+#    fetch-registry: true
+#    register-with-eureka: true
+#    service-url:
+#      defaultZone: http://localhost:8761/eureka
 
 
