--- a/RatingMicroService/src/main/resources/application.yml
+++ b/RatingMicroService/src/main/resources/application.yml
@@ -10,18 +10,18 @@ spring:
   jpa:
     hibernate:
       ddl-auto: update
-
     database-platform: org.hibernate.dialect.MySQLDialect
+  config:
+   import: configserver:http://localhost:8083
 
 server:
   port: 8082
 
-
-eureka:
-  instance:
-    prefer-ip-address: true
-  client:
-    fetch-registry: true
-    register-with-eureka: true
-    service-url:
-      defaultZone: http://localhost:8761/eureka
+#eureka:
+#  instance:
+#    prefer-ip-address: true
+#  client:
+#    fetch-registry: true
+#    register-with-eureka: true
+#    service-url:
+#      defaultZone: http://localhost:8761/eureka
